--- a/index.ipynb
+++ b/index.ipynb
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
        " 'text': []}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,9 +866,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "7db75586-33cb-11e9-b696-4df3ffb88daf",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5
+         ],
+         "y": [
+          15,
+          19,
+          23,
+          27,
+          31,
+          35
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "f' (x) = 4.0",
+         "text": [],
+         "type": "scatter",
+         "uid": "7db758ba-33cb-11e9-b696-4df3ffb88daf",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          19,
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta f = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "7db75a18-33cb-11e9-b696-4df3ffb88daf",
+         "x": [
+          3,
+          3
+         ],
+         "y": [
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta x = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "7db75b26-33cb-11e9-b696-4df3ffb88daf",
+         "x": [
+          2,
+          3
+         ],
+         "y": [
+          23,
+          23
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"33c46dd3-b7d3-4ba3-8560-0d452f10d92b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"33c46dd3-b7d3-4ba3-8560-0d452f10d92b\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"7dbee79c-33cb-11e9-b696-4df3ffb88daf\"}, {\"mode\": \"lines\", \"name\": \"f' (x) = 4.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [19.0, 23, 27.0], \"type\": \"scatter\", \"uid\": \"7dbee9d6-33cb-11e9-b696-4df3ffb88daf\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"7dbeeb34-33cb-11e9-b696-4df3ffb88daf\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"7dbeec1a-33cb-11e9-b696-4df3ffb88daf\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"33c46dd3-b7d3-4ba3-8560-0d452f10d92b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"33c46dd3-b7d3-4ba3-8560-0d452f10d92b\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"7dbee79c-33cb-11e9-b696-4df3ffb88daf\"}, {\"mode\": \"lines\", \"name\": \"f' (x) = 4.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [19.0, 23, 27.0], \"type\": \"scatter\", \"uid\": \"7dbee9d6-33cb-11e9-b696-4df3ffb88daf\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"7dbeeb34-33cb-11e9-b696-4df3ffb88daf\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"7dbeec1a-33cb-11e9-b696-4df3ffb88daf\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "delta_x = 1\n",
     "\n",
@@ -890,9 +978,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the format of your plot grid:\n",
+      "[ (1,1) x1,y1 ]  [ (1,2) x2,y2 ]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "7f010f5e-33cb-11e9-b696-4df3ffb88daf",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6
+         ],
+         "xaxis": "x",
+         "y": [
+          15,
+          19,
+          23,
+          27,
+          31,
+          35,
+          39
+         ],
+         "yaxis": "y"
+        },
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "7f02015c-33cb-11e9-b696-4df3ffb88daf",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6
+         ],
+         "xaxis": "x2",
+         "y": [
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4
+         ],
+         "yaxis": "y2"
+        }
+       ],
+       "layout": {
+        "xaxis": {
+         "anchor": "y",
+         "domain": [
+          0,
+          0.45
+         ]
+        },
+        "xaxis2": {
+         "anchor": "y2",
+         "domain": [
+          0.55,
+          1
+         ]
+        },
+        "yaxis": {
+         "anchor": "x",
+         "domain": [
+          0,
+          1
+         ]
+        },
+        "yaxis2": {
+         "anchor": "x2",
+         "domain": [
+          0,
+          1
+         ]
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"094657fd-cd22-458b-8b97-ce2c6992bc3c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            '094657fd-cd22-458b-8b97-ce2c6992bc3c',\n",
+       "            [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6], \"y\": [15, 19, 23, 27, 31, 35, 39], \"type\": \"scatter\", \"uid\": \"7f010f5e-33cb-11e9-b696-4df3ffb88daf\", \"xaxis\": \"x\", \"yaxis\": \"y\"}, {\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6], \"y\": [4.0, 4.0, 4.0, 4.0, 4.0, 4.0, 4.0], \"type\": \"scatter\", \"uid\": \"7f02015c-33cb-11e9-b696-4df3ffb88daf\", \"xaxis\": \"x2\", \"yaxis\": \"y2\"}],\n",
+       "            {\"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.45]}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0]}, \"xaxis2\": {\"anchor\": \"y2\", \"domain\": [0.55, 1.0]}, \"yaxis2\": {\"anchor\": \"x2\", \"domain\": [0.0, 1.0]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('094657fd-cd22-458b-8b97-ce2c6992bc3c',{});}).then(function(){Plotly.animate('094657fd-cd22-458b-8b97-ce2c6992bc3c');})\n",
+       "        });</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"094657fd-cd22-458b-8b97-ce2c6992bc3c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            '094657fd-cd22-458b-8b97-ce2c6992bc3c',\n",
+       "            [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6], \"y\": [15, 19, 23, 27, 31, 35, 39], \"type\": \"scatter\", \"uid\": \"7f010f5e-33cb-11e9-b696-4df3ffb88daf\", \"xaxis\": \"x\", \"yaxis\": \"y\"}, {\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6], \"y\": [4.0, 4.0, 4.0, 4.0, 4.0, 4.0, 4.0], \"type\": \"scatter\", \"uid\": \"7f02015c-33cb-11e9-b696-4df3ffb88daf\", \"xaxis\": \"x2\", \"yaxis\": \"y2\"}],\n",
+       "            {\"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.45]}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0]}, \"xaxis2\": {\"anchor\": \"y2\", \"domain\": [0.55, 1.0]}, \"yaxis2\": {\"anchor\": \"x2\", \"domain\": [0.0, 1.0]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('094657fd-cd22-458b-8b97-ce2c6992bc3c',{});}).then(function(){Plotly.animate('094657fd-cd22-458b-8b97-ce2c6992bc3c');})\n",
+       "        });</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import make_subplots, trace_values, plot_figure\n",
     "\n",
@@ -929,6 +1141,13 @@
     "\n",
     "In the final section, we introduced some new functions, `delta_f_trace` and `delta_x_trace` that plot our deltas on the graph.  Then we introduced the `derivative_trace` function that shows the rate of change, or slope, for the function between initial x and initial x plus delta x."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
